# agent-skills

./: AGENTS.md  README.md  pyproject.toml
examples/: assembler_usage.py  cache_usage.py
examples/compose_demo/: demo.py
examples/compose_demo/composed_output/: SKILL.md
examples/compose_demo/default_skill/: README.md  SKILL.md
examples/compose_demo/user_skill/: SKILL.md
src/skill_manager/: __init__.py  __main__.py  cli.py
src/skill_manager/compose/: __init__.py  assembler.py  files.py  markdown.py
src/skill_manager/config/: __init__.py  defaults.py  loader.py  schema.py
src/skill_manager/core/: __init__.py  registry.py  resolver.py  skill.py
src/skill_manager/fetch/: __init__.py  cache.py  github.py  protocols.py
src/skill_manager/utils/: output.py  paths.py
tests/: README.md  conftest.py  test_assembler.py  test_assembler_integration.py  test_cache.py  test_cache_integration.py  test_cli.py  test_config.py  test_files_composer.py  test_github_fetcher.py  test_markdown_composer.py  test_registry.py  test_resolver.py  test_schema.py
